2021-07-13  Alex Christensen  <achristensen@webkit.org>

        Update and fix URL WPT tests
        https://bugs.webkit.org/show_bug.cgi?id=227820

        Reviewed by Chris Dumez.

        There was an edge case where if we set a path to an empty string, it would add a slash.  No more.

        * wtf/URL.cpp:
        (WTF::URL::setPath):

2021-07-13  Michael Catanzaro  <mcatanzaro@gnome.org>

        Remove USE_64KB_PAGE_BLOCK
        https://bugs.webkit.org/show_bug.cgi?id=227905

        Reviewed by Yusuke Suzuki.

        * wtf/PageBlock.h:

2021-07-12  Filip Pizlo  <fpizlo@apple.com> and Yusuke Suzuki  <ysuzuki@apple.com>

        New malloc algorithm
        https://bugs.webkit.org/show_bug.cgi?id=226404

        Reviewed by Yusuke Suzuki.

        Introduce flags for using libpas as the ExecutableAllocator.

        Explicitly ask for gigacage initialization, since libpas prefers it this way right now.

        * wtf/FastTLS.h:
        * wtf/PlatformUse.h:
        * wtf/Threading.cpp:
        (WTF::initialize):

2021-07-12  Wenson Hsieh  <wenson_hsieh@apple.com>

        [Cocoa] Turn on `USE(OS_STATE)` when building with a non-Apple-internal SDK
        https://bugs.webkit.org/show_bug.cgi?id=227884

        Reviewed by Tim Horton.

        Enable the compile-time flag for all Cocoa builds.

        * wtf/PlatformUse.h:

2021-07-12  Chris Fleizach  <cfleizach@apple.com>

        AX: Make WebKit observe spatial audio accessibility settings
        https://bugs.webkit.org/show_bug.cgi?id=227848

        Reviewed by Sam Weinig.

        This flag was using the wrong format for a HAVE setting, so the code wasn't being compiled in.

        * wtf/PlatformHave.h:

2021-07-12  Simon Fraser  <simon.fraser@apple.com>

        Add a StyleSheets log channel and some logging
        https://bugs.webkit.org/show_bug.cgi?id=227880

        Reviewed by Alan Bujtas.

        Make it possible to feed Ref<> and RefPtr<> into TextStream.

        * wtf/text/TextStream.h: