@@ -25,7 +25,7 @@
 
 #import "config.h"
 
-#if PLATFORM(IOS_FAMILY) && !PLATFORM(MACCATALYST)
+#if HAVE(SYSTEM_STATUS)
 
 #import <wtf/SoftLinking.h>
 
