@@ -1,3 +1,11 @@
+2021-07-14  Jer Noble  <jer.noble@apple.com>
+
+        Unreviewed build fix after r279912 (239661@main); Adopt HAVE(SYSTEM_STATUS) macro.
+
+        * GPUProcess/cocoa/GPUConnectionToWebProcessCocoa.mm:
+        (WebKit::GPUConnectionToWebProcess::setCaptureAttributionString):
+        * Platform/spi/ios/SystemStatusSPI.h:
+
 2021-07-14  Michael Saboff  <msaboff@apple.com>
 
         [macOS] Add new entitlement to limit process to a single JIT region
